fixed alignment issues, added shadows

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,11 @@ body {
     font-family: "Jost", serif;
     padding-top: 5rem;
     min-width: 320px; /* Minimum width for mobile */
+    background-color: #EDE8E0;
 }
 
 section {
-    padding: 10rem;
+    padding: 1rem;
     margin:0 auto;
     max-width: 150rem;
     border-radius: 7px;
@@ -24,6 +25,8 @@ h1, h2, h3, h4 {
 /* Navigation Bar */
 nav {
     background-color: #7A594F;
+    backdrop-filter: blur(5px);
+    opacity: 95%;
     height: 4rem;
 
     display: flex;
@@ -64,7 +67,8 @@ nav {
     flex-direction: row;
     flex-wrap: wrap; /* Allow wrapping on small screens */
     gap: 1rem;
-    padding: 1rem;
+    padding: 0px;
+    margin: 1rem;
 }
 
 /*Picture*/
@@ -79,6 +83,7 @@ nav {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.192);
 }
 
 #picture h2 {
@@ -109,6 +114,7 @@ nav {
     position: relative;
     padding: 1rem;
     padding-top: 0.3rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.192);
 }
 
 .about {
@@ -158,8 +164,10 @@ nav {
 #projects {
     background-color: #FFF0C7;
     padding: 1rem;
-    margin-bottom: 2rem;
+    margin: 1rem;
     box-sizing: border-box;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.192);
+    width:50%;
 }
 
 .project-tabs {
@@ -179,6 +187,7 @@ nav {
     padding-left: 1rem;
     padding-right: 1rem;
     border-radius: 10px;
+    margin-left: -1rem;
 }
 
 .active[data-tab-content] {
@@ -186,6 +195,8 @@ nav {
     opacity: 1;
     transform: translateY(30px); 
     pointer-events: auto; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.205);
+    margin-left: -1rem;
 }
 
 .tabs {
@@ -213,20 +224,16 @@ nav {
     transition: background-color 0.3s ease;
 }
 
-.tab-content {
-    margin-left: 0vw;
-}
-
 /*Skills*/
 #skills {
     background-color: #5F7055;
-    padding: 3rem;
-    margin: 1rem auto;
-    margin-bottom: 25rem;
+    padding: 1rem;
+    margin: 1rem;
+    margin-bottom: 300px;
     box-sizing: border-box;
     width: 100%;
     position: relative;
-    top: 325px;
+    top: 270px;
     text-align: center;
 }
 
